--- a/.gitignore
+++ b/.gitignore
@@ -1,160 +1,214 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
+## __author__ = 'mangalbhaskar'
+## disallow files/folders in same directory as the .gitignore file
 
-# C extensions
+/*
+# Ignoring pracctice files
+
+## allow some files
+!.dockerignore
+!.gitattributes
+!.nojekyll
+!.gitignore
+!.gitmodules/
+!.husky/
+!.flake8
+!*.cjs
+!*.json
+!.eslintignore
+!.prettierignore
+!.prettierrc
+!.npmrc
+!.pypirc
+!.pylintrc
+##
+!*.md
+!*.adoc
+!*.html
+!*.yml
+!*.yaml
+!*.xml
+!*.sh
+!*.txt
+!*.py
+!*.cfg
+!*.conf
+!*.example
+!*.toml
+!*.env
+!*.in
+!*.ini
+!*.js
+!*.ts
+!LICENSE*
+!Dockerfile*
+!package.json
+#
+!apps/
+!assets/
+!docker/
+!**/data
+!demo/
+!docs/
+!docs-*/
+!dist/
+!e2e/
+!licenses/
+!requirements/
+!samples/
+!scripts/
+!external/
+!src/
+!tests/
+!reports/
+!wsgi-bin/
+!skydnn_*
+
+## AI weights to be excluded
+**/*.pt
+**/*.pth
+**/*.onnx
+**/*.mlmodel
+**/*.torchscript
+**/*.npy
+**/*.npz
+**/*.pkl
+**/*.t7
+**/*.weights
+**/*.h5
+**/*.ckpt
+**/*.ckpt.*
+**/*.ckpt-*
+**/*.tflite
+**/*.pb
+**/*.pbtext
+**/*.pb.tflite
+**/checkpoint
+**/*.hdf5
+**/*.data-*
+**/*.index
+**/*-lock.*
+**/*.lock
+
+## PDF, Images, audios, videos are excluded
+**/*.pdf
+**/*.bmp
+**/*.png
+**/*.jpg
+**/*.jpeg
+**/*.tif
+**/*.tiff
+**/*.dng
+**/*.gif
+**/*.mp3
+**/*.mov
+**/*.avi
+**/*.mp4
+**/*.mpg
+**/*.mpeg
+**/*.m4v
+**/*.wmv
+**/*.mkv
+**/*.webm
+**/*.flv
+
+## disallow some specific files in the allowed list
+**/*~
+**/*.swp
+**/nohup.*
+**/*.log
+**/*bk
+**/temp.*
+**/.goutputstream-*
+
+## conventions - these directories not allowed
+**/cache
+**/_site
+**/tmp
+# **/config
+**/*-config
+# **/data/*
+**/*-data
+**/logs
+**/virtualenvs
+**/site-packages
+**/venv
+**/mobile
+**/*-mobile
+**/deprecated
+##
+# **/blah/
+# **/blah*
+
+**/local
+**/.local
+**/*.local
+**/*.local.*
+
+**/README.html
+**/node_modules
+**/*.pyc
+**/*__pycache__
+# **/*.py[cod]
+# **/*$py.class
+**/*.ipynb_checkpoints
+**/*.python-version
+**/*.pytest_cache
+**/*.mypy_cache
+**/*.py.*
+**/gradle
+**/captures
+**/screenshot
+
+**/.vscode
+**/.gradle
+**/.cache
+**/-cache
+**/.idea
+**/.externalNativeBuild
+**/*.iml
+**/.DS_Store
+**/.tox
+**/build
+# **/dist
+**/bin
+**/.Trashes
+
+**/Thumbs.db
+**/Desktop.ini
+**/Spotlight-V100
+**/._*
+
+## Jekyll
+**/.sass-cache/
+**/.jekyll-cache/
+**/.jekyll-metadata
+**/vendor
+**/bundle
+**/.vendor
+**/.bundle
+
+## Python egg metadata, regenerated from source files by setuptools.
+**/*.egg-info
+**/*.egg
+**/*.whl
+
+## disallow C extensions
 *.so
 
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
+## override and allow
+!docs/**/*.png
+!docs/**/*.jpg
+!docs/**/*.jpeg
+!docs/**/*.gif
+##
+!data/**/*.mkv
+!data/**/*.mp4
+##
+!**/*.png
+!**/*.jpg
+!**/*.jpeg
+!**/*.gif
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-cover/
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-.pybuilder/
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
-# pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
-
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
-# poetry
-#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
-#poetry.lock
-
-# pdm
-#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
-#pdm.lock
-#   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
-#   in version control.
-#   https://pdm.fming.dev/#use-with-ide
-.pdm.toml
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
-__pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
-
-# pytype static type analyzer
-.pytype/
-
-# Cython debug symbols
-cython_debug/
-
-# PyCharm
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+!**/data/**/*.yml
+!**/data/**/*.csv
+!**/data/**/*.json
